# pokedex

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  run-server.sh  update-repos.sh
client-data/: BUILD.bazel  bug-ghost.json  flying-water.json  mimikyu.json  zeraora.json
cpp/: BUILD.bazel  client.cpp
go-client/: BUILD.bazel  client.go  go.mod
go-client/api/: BUILD.bazel  httpclient.go  pokeclient.go  pokeclient_test.go
java/: BUILD.bazel
java/com/: Client.java
java/com/api/: DefaultHttpClient.java  Either.java  HttpClient.java  HttpResponse.java  Json.java  Meta.java  PokeClient.java  PokeClientTest.java  PokeClients.java  Pokemon.java  Result.java
rust/: BUILD.bazel  Cargo.toml  EXEC.bazel
rust/src/: client.rs
server/: BUILD.bazel  go.mod  go.sum  router.json  server.go
server/poke/: BUILD.bazel  api.go  pokedex.go
