load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go-client_lib",
    srcs = ["client.go"],
    importpath = "github.com/skhatri/pokedex/go-client",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_binary(
    name = "go-client",
    embed = [":go-client_lib"],
    visibility = ["//visibility:public"],
)
