[package]
name = "pokedex-rust-client"
version = "0.1.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "client.rs"

[dependencies]
log = "=0.3.6"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[package.metadata.raze]
# The path at which to write output files.
#
# `cargo raze` will generate Bazel-compatible BUILD files into this path.
# This can either be a relative path (e.g. "foo/bar"), relative to this
# Cargo.toml file; or relative to the Bazel workspace root (e.g. "//foo/bar").
workspace_path = "//cargo"

# This causes aliases for dependencies to be rendered in the BUILD
# file located next to this `Cargo.toml` file.
package_aliases_dir = "."

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

# The two acceptable options are "Remote" and "Vendored" which
# is used to indicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Remote"
