load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/skhatri/pokedex/server",
    visibility = ["//visibility:private"],
    deps = [
        "//server/poke",
        "//server/vendor/github.com/skhatri/api-router-go/router",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "server_image",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
